# Solar_Tracker_GUI

./: CMakeLists.txt  DataPlotter.cpp  DataPlotter.h  LDRTracker.cpp  LDRTracker.h  Qt_GGtracker.pro  Qt_mainwindow.cpp  README.md  SerialPort.cpp  SerialPort.h  SolarData.h  ktltcdt_project.ino  main.cpp  mainwindow.h
